--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,9 +1,15 @@
 $theme-colors: (
-  "primary": #0074d9,
-  "danger": #ff4136,
+  "primary": blue,
+  "success": green,
+  "danger": red,
+  "warning": yellow,
 );
 
 // Custom.scss
 // Option A: Include all of Bootstrap
 
 @import "~bootstrap/scss/bootstrap";
+
+body {
+  padding-top: 5rem; // 5 rem  = 5*16
+}
