--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,8 +1,10 @@
 $theme-colors: (
-  "primary": blue,
-  "success": green,
-  "danger": red,
-  "warning": yellow,
+  "primary": #444f5a,
+  "success": #4a3933,
+  "danger": #e40017,
+  "warning": #ff6f3c,
+  "thead": #7d5a5a,
+  "tbody": #ffecda,
 );
 
 // Custom.scss
